fixes, optimizations, and Updater.java changes